--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ She calls you, panicked, afraid.
 &quot;He showed up and he won&#39;t leave,&quot; she says. &quot;Please come help.&quot;
 
 
-By now the chickenwire fencing installation is proceeding against all protestation. (click-append: &quot;protestation&quot;) [ because some men are conditioned to think that no means yes, that it is merely a token resistence that allows women to play the part of the pursued (click-replace: &quot;pursued&quot;) [stalked] and men the part of the persuer (click-replace: &quot;persuer&quot;) [stalked]] As if women&#39;s desires and refusals are inconsequential. (click-replace: &quot;inconsequential&quot;) [meaningless]
+By now the chickenwire fencing installation is proceeding against all protestation. (click-append: &quot;protestation&quot;) [ because some men are conditioned to think that no means yes, that it is merely a token resistence that allows women to play the part of the pursued (click-replace: &quot;pursued&quot;) [stalked] and men the part of the persuer (click-replace: &quot;persuer&quot;) [stalked]] As if women&#39;s desires and refusals are inconsequential. (click-replace: &quot;inconsequential&quot;) [meaningless] (click-replace: &quot;meaningless&quot;) [token gestures of resistance, designed to be overcome]
 
 
 Chickenwire fencing, purposed to keep danger away, is now the cause of your detainment in a small apartment with a madman and his whimsy. (click-replace: &quot;whimsy&quot;) [stubborn resistance] (click-replace: &quot;stubborn resistance&quot;) [continued efforts at coercive control]
