--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ Now with ever more reason to work things out, [[you plead]] with him for a fresh
 [[But all of his promises are dandelions in the wind.]] 
 
 
-[[You&#39;ve been stuck in a loop for so long.]]</tw-passagedata><tw-passagedata pid="19" name="You expect to feel..." tags="" position="1208,487" size="100,100">Relief, maybe, or a sense of freedom?
+(if:visits &gt;= 3)[[You&#39;ve been stuck in a loop for so long.]]</tw-passagedata><tw-passagedata pid="19" name="You expect to feel..." tags="" position="1208,487" size="100,100">Relief, maybe, or a sense of freedom?
 
 
 So you would expect after two-and-a-half years of abuse drawn out through court proceedings and other forms of systemic abuse...
