--- a/index.html
+++ b/index.html
@@ -381,26 +381,26 @@ Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to
 
 * the applicant in Family Court
 * the so-called injured party
-* the victim (click-append: &quot;the victim&quot;) [ (because it&#39;s easy to label a woman crazy when she&#39;s doing everything in her power to survive his [[campaign of terror]]).] </tw-passagedata><tw-passagedata pid="21" name="Title Page" tags="title-page" position="265,125" size="100,100">
+* the victim (click-append: &quot;the victim&quot;) [ (because it&#39;s easy to label a woman crazy when she&#39;s doing everything in her power to survive his [[campaign of terror]]).] </tw-passagedata><tw-passagedata pid="21" name="The Chickenwire Incident" tags="title-page" position="265,125" size="100,100">
 
 
 [(enchant:?passage,(b4r:&quot;double&quot;)+(b4r-colour:white))&#39;&#39;[[THE CHICKENWIRE INCIDENT]]&#39;&#39;]
 
 
-</tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,128" size="100,100">It is 8 or 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. 
+</tw-passagedata><tw-passagedata pid="22" name="THE CHICKENWIRE INCIDENT" tags="" position="402,128" size="100,100">It&#39;s 9pm on a Friday night. You&#39;re selling stripperwear at Goldfingers in the CBD, fitting dancers into sparkly bikinis and sequinned gowns. 
 
 &lt;img src=&quot;img/rack6.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;
 &lt;img src=&quot;img/rack4.png&quot; alt=&quot;clothing rack with colourful outfits&quot; /&gt;
 
-In those days the money you earned was covered in sweat and cocaine. (click-append: &quot;sweat and cocaine.&quot;) [ Isn&#39;t all money, really?] Tired of exploiting yourself, you tapped into the niche dancewear market instead. Your goal was not to take advantage of the girls, but to provide a service. You played stylist. (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime]
+The money you earned is covered in sweat and cocaine. (click-append: &quot;sweat and cocaine.&quot;) [ Isn&#39;t all money, really?] Tired of exploiting yourself, you tap into the niche dancewear market instead. Your is not to take advantage of the girls, but to provide a service. You play stylist. (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime]
 
-&lt;img src=&quot;img/party.png&quot; alt=&quot;more party girls&quot; /&gt;
+&lt;img src=&quot;img/party.png&quot; alt=&quot;party girls&quot; /&gt;
 
-Your life bled into theirs: their customers paid for your product; their customer&#39;s powders lined your nose. (click-append: &quot;lined their nose&quot;) [, when to refuse would get you called a snitch] That is to say, you were an active participant. (click-replace: &quot;an active participant&quot;) [a consumer as much as a hawker of pretty things] (click-replace: &quot;a consumer as much as a hawker of pretty things&quot;) [as likely to keep a corset for yourself as you were to sell it] (click-append: &quot;as likely to keep a corset for yourself as you were to sell it&quot;) [. Which meant you had to sell more to buy more to wear more to sell more]
+Your life bleeds into theirs: their customers pay for your product; their customer&#39;s powders line your nose. (click-append: &quot;line your nose&quot;) [, because to refuse would earn you the label of &quot;snitch&quot;] That is to say, you were an active participant. (click-replace: &quot;an active participant&quot;) [a consumer as much as a hawker of pretty things] (click-replace: &quot;a consumer as much as a hawker of pretty things&quot;) [as likely to keep a corset for yourself as you were to sell it] (click-append: &quot;as likely to keep a corset for yourself as you were to sell it&quot;) [. Which meant you had to sell more to buy more to wear more to sell more]
 
 &lt;img src=&quot;img/corsets.png&quot; alt=&quot;girls in corsets drinking champagne&quot; /&gt;
 
-Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind cycle&quot;) [expensive and sometimes debt-inducing lifestyle] and your world was about to change. Things had already spun upside-down, but now that other people were being sucked into the vortex, you could no longer deny that a certain incubus had glommed on to your light.
+Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind cycle&quot;) [expensive and sometimes debt-inducing lifestyle] and your world is about to change. Things had already spun upside-down, but now that other people are being sucked into the vortex, you can no longer deny that a certain incubus is draining the light from your life.
 
 &lt;img src=&quot;img/party3.png&quot; alt=&quot;more party girls&quot; /&gt;
 
