--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ Abusers (t8n-delay: 6s) +(t8n: &quot;flicker&quot;) [twist] (stop:)the system to
 &lt;img src=&quot;img/rack6.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;
 &lt;img src=&quot;img/rack4.png&quot; alt=&quot;clothing rack with colourful outfits&quot; /&gt;
 
-The money you earned is covered in sweat and cocaine. (click-append: &quot;sweat and cocaine.&quot;) [ Isn&#39;t all money, really?] Tired of exploiting yourself, you tap into the niche dancewear market instead. Your is not to take advantage of the girls, but to provide a service. You play stylist. (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime]
+The money you earn is covered in sweat and cocaine. (click-append: &quot;sweat and cocaine.&quot;) [ Isn&#39;t all money, really?] Tired of exploiting yourself, you tap into the niche dancewear market instead. Your is not to take advantage of the girls, but to provide a service. You play stylist. (click-replace: &quot;stylist&quot;) [cheerleader] (click-replace: &quot;cheerleader&quot;) [confidante] (click-replace: &quot;confidante&quot;) [seamstress] (click-replace: &quot;seamstress&quot;) [stage mom] (click-replace: &quot;stage mom&quot;) [therapist] (click-replace: &quot;therapist&quot;) [partner in crime]
 
 &lt;img src=&quot;img/party.png&quot; alt=&quot;party girls&quot; /&gt;
 
