--- a/index.html
+++ b/index.html
@@ -142,22 +142,43 @@ Words etched in your neuropathways.
 [[You expect to feel...]]</tw-passagedata><tw-passagedata pid="6" name="having something stolen" tags="" position="567,156" size="100,100">Karla is owned by a boxer from Sydney, or at least that&#39;s how it appears from the way she has to sneak around to have any semblence of a life. You love her and Carmella immediately when they catch and call out the girl who rips an outfit off your rack and hides it away without payment. 
 
 
-Karla buys Ed Hardy hoodies and dresses from you. (click-replace: &quot;hoodies and dresses&quot;) [shit] The bikies love it.
+Karla buys Ed Hardy hoodies and dresses from you. (click-replace: &quot;hoodies and dresses&quot;) [shit] (click-append: &quot;Ed Hardy shit from you.&quot;) [ The bikies love it.]
 
 
-One night Jodi organises a birthday party for one of her friends. (click-replace: &quot;friends&quot;) [clients] (click-replace: &quot;clients&quot;) [suppliers] Let&#39;s call him D. For Dickhead.
+One night Jodi organises a birthday party for one of her friends. (click-replace: &quot;friends&quot;) [clients] (click-replace: &quot;clients&quot;) [suppliers] (click-append: &quot;her suppliers.&quot;) [ 
+
+Let&#39;s call him D.] (click-append: &quot;Let&#39;s call him D&quot;) [. For Dickhead]
+
 
 &lt;img src=&quot;img/party2.png&quot; alt=&quot;party girls in limo&quot; /&gt;
 
-Back at D&#39;s apartment after a typical Sunday (click-replace: &quot;Sunday&quot;) [strippers&#39; night out] at Love Machine, D is hellbent on getting Karla to fuck him. With Jodi unofficially acting as his pimp, (click-append: &quot;his pimp&quot;) [, which is something she would never even admit to herself] bringing him girls he might like, or whom he might find easy, Karla is simply sport. D won&#39;t let us leave until we each have a drink. He&#39;s spiked them all with G, which Jodi loves and you hate. Karla is freaking out, but quietly. You never know what a scum-of-the-earth wanna-be baller (click-replace: &quot;baller&quot;) [gangster] (click-replace: &quot;gangster&quot;) [Romeo] might do. 
 
-These are the kinds of guys who bolt the doors from the inside and then hide the keys.
+Back at D&#39;s apartment after a typical Sunday (click-replace: &quot;Sunday&quot;) [strippers&#39; night out] at Love Machine, D is hellbent on getting Karla to fuck him. (click-append: &quot;to fuck him.&quot;) [ With Jodi unofficially acting as his pimp, (click-append: &quot;his pimp&quot;) [, which is something she would never even admit to herself] bringing him girls he might like, or whom he might find easy, Karla is simply sport.] (click-append: &quot;Karla is simply sport.&quot;) [ 
 
-You might ask, and this is a pertinant question, Why the fuck put yourself in danger like that? It&#39;s partly to please Jodi. (Click-append: &quot;It&#39;s partly to please Jodi.&quot;) [ But again: Why the fuck would you want a friend like that?] Also, industry night is a gamble with high stakes. You never know whether you&#39;ll make it til sunrise, whether you&#39;ll meet an elusive someone or even how you&#39;ll get home.
+
+D won&#39;t let you leave until you each have a drink.] (click-append: &quot;until you each have a drink.&quot;) [ He&#39;s spiked them all with G, which Jodi loves and you hate.] Karla is freaking out, but quietly. (click-append: &quot;but quietly.&quot;) [ You never know what a scum-of-the-earth wanna-be baller (click-replace: &quot;baller&quot;) [gangster] (click-replace: &quot;gangster&quot;) [Romeo] might do. ] (click-append: &quot;Romeo might do.&quot;) [ 
+
+
+These are the kinds of guys who bolt the doors from the inside and then hide the keys.]
+
+
+You might ask... (click-append: &quot;You might ask...&quot;) [ and this is a pertinant question: Why the fuck put yourself in danger like that?] (click-append: &quot;Why the fuck put yourself in danger like that?&quot;) [ It&#39;s partly to please Jodi.] (Click-append: &quot;It&#39;s partly to please Jodi.&quot;) [ But again: Why the fuck would you want a friend like that?] 
+
+
+Also... (click-append: &quot;Also...&quot;) [industry night is a gamble with high stakes.] (click-append: &quot;high stakes.&quot;) [ You never know whether you&#39;ll make it til sunrise, whether you&#39;ll meet an elusive someone, or even how/if you&#39;ll get home.]
+
 
 &lt;img src=&quot;img/melbourne.jpg&quot; alt=&quot;Melbourne at night&quot; /&gt;
 
-On this particular Sunday night, (click-append: &quot;this particular Sunday night&quot;) [, now technically Monday morning,] you decide to play hero to Karla by downing her drink as well as yours. In the end, you and Karla made it out of therenmolested, and it feels like a win at the time. You wonder if Jodi ended up giving herself up to D a booby prize in exchange for a pipe after we left.
+
+On this particular Sunday night... (click-append: &quot;On this particular Sunday night&quot;) [, now technically Monday morning] (click-append: &quot;Monday morning...&quot;) [you decide to play hero to Karla.] (click-append: &quot;hero to Karla&quot;) [ by downing her drink as well as yours] 
+
+
+In the end... (click-append: &quot;In the end...&quot;) [you and Karla make it out of there unnmolested.] (click-append: &quot;unmolested&quot;) [, which feels like a win at the time] 
+
+
+You wonder... (click-append: &quot;You wonder...&quot;) [if Jodi ended up giving herself up to D as a booby prize after you and Karla left.] (click-append: &quot;booby prize&quot;) [ in exchange for a pipe]
+
 
 Where&#39;s your head at? Your phone&#39;s still ringing! You&#39;d better [[slide right to answer]].</tw-passagedata><tw-passagedata pid="7" name="call X" tags="" position="276,264" size="100,100">Just recently Jade asked X how to install chickenwire fencing to prevent her cat from escaping off of her balcony. 
 
@@ -167,22 +188,30 @@ You call X, demanding that he explain himself.
 
 He denies (click-replace: &quot;denies&quot;) [lies about] being at Jade&#39;s house.
 
-Later that night, when you pack up your suitcase to head to another club, the bouncer describes how a guy who meets the same physical description as X shows up at the club, asking for you by name, like a creepy stalker. To protect your privacy, the bouncer said you weren&#39;t there.
+Later that night... (click-append: &quot;Later that night...&quot;) [when you pack up your suitcase to head to another club, the bouncer describes how a guy who meets the same physical description as X showed up at the club, asking for you by name, like a creepy stalker.] (click-append: &quot;creepy stalker&quot;) [. To protect your privacy, the bouncer had told X you weren&#39;t there]
 
 &lt;img src=&quot;img/rackjen.png&quot; alt=&quot;clothes for sale&quot; /&gt;
 
-You confront X about him showing up at your work. Of course he denies (click-replace: &quot;denies&quot;) [lies about] checking up on your whereabouts (click-append: &quot;checking up on your whereabouts&quot;) [, although later he will confess to the chickenwire and the stalking in therapy]. 
+You confront X about spying on you at work. Of course he denies (click-replace: &quot;denies&quot;) [lies about] checking up on your whereabouts. (click-append: &quot;checking up on your whereabouts&quot;) [, although later he will confess to the chickenwire and the stalking in therapy] 
 
-[[The next day...]]</tw-passagedata><tw-passagedata pid="8" name="The next day..." tags="" position="191,464" size="100,100">X doesn&#39;t want you to sell clothing at the clubs that night. He phones you as you drive away with your bags packed for the night. You&#39;re beginning to feel suffocated; you couldn&#39;t get out of the apartment quick enough.
+[[The next day...]]</tw-passagedata><tw-passagedata pid="8" name="The next day..." tags="" position="191,464" size="100,100">X doesn&#39;t want you to sell clothing at the clubs. He phones you as you drive away with your bags packed for the night. You&#39;re beginning to feel suffocated; you couldn&#39;t get out of the apartment quick enough.
 
+You answer the phone. (click-append: &quot;You answer the phone.&quot;) 
+[
 
-&quot;The car is riding funny,&quot; he says, as you&#39;re halfway down the block. &quot;You might want to come home.&quot;
+&quot;The car is riding funny,&quot; he says, as you&#39;re halfway down the block. &quot;You might want to come home.&quot;]
 
 
 Do you turn around and [[drive home]] or [[keep driving]]?</tw-passagedata><tw-passagedata pid="9" name="drive home" tags="" position="116,614" size="100,100">Home is where he wants you because that&#39;s where he thinks a woman belongs. In the kitchen, cooking. In the bathroom, cleaning. In the bedroom, tarted up in fishnet stockings and crotchless knickers, fucking, sucking. 
 
 
-And yet you&#39;re the one paying most of the rent and most of the bills, because he&#39;s on disability. (click-append: &quot;disability&quot;) [, even though his claimed disability doesn&#39;t prevent him from taking on high-paying cash jobs] (click-replace: &quot;cash&quot;) [untaxed] On second thought, who&#39;s going to pay the rent if you turn the car around? You can always call RACV in between clubs so [[keep driving]]. </tw-passagedata><tw-passagedata pid="10" name="keep driving" tags="" position="267,615" size="100,100">Besides, isn&#39;t it odd that he would have noticed that something was wrong with the car?
+And yet you&#39;re the one paying most of the rent and most of the bills, because he&#39;s on disability. (click-append: &quot;disability&quot;) [, even though his claimed disability doesn&#39;t prevent him from taking on high-paying cash jobs] (click-replace: &quot;cash&quot;) [untaxed] (click-append: &quot;untaxed jobs.&quot;) [
+
+On second thought, who&#39;s going to pay the rent if you turn the car around?]
+
+(click-append: &quot;if you turn the car around?&quot;) [
+
+You can always call RACV in between clubs so [[keep driving]]. ]</tw-passagedata><tw-passagedata pid="10" name="keep driving" tags="" position="267,615" size="100,100">Besides, isn&#39;t it odd that he would have noticed that something was wrong with the car?
 
 
 What is the possibility that he tampered with the car to keep you at home?
@@ -400,7 +429,7 @@ Your life bleeds into theirs: their customers pay for your product; their custom
 
 &lt;img src=&quot;img/corsets.png&quot; alt=&quot;girls in corsets drinking champagne&quot; /&gt;
 
-Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind cycle&quot;) [expensive and sometimes debt-inducing lifestyle] and your world is about to change. Things had already spun upside-down, but now that other people are being sucked into the vortex, you can no longer deny that a certain incubus is draining the light from your life.
+Ten years into this cycle (click-prepend: &quot;cycle&quot;) [very fun whirlwind ] (click-replace: &quot;very fun whirlwind cycle&quot;) [expensive and sometimes debt-inducing lifestyle] and your world is about to change. Your life had already begun to turn upside-down, but now other people are being sucked into the hellish vortex that is your life. A certain incubus picks you as an easy target and is in the process of draining the light from your life.
 
 &lt;img src=&quot;img/party3.png&quot; alt=&quot;more party girls&quot; /&gt;
 
