--- a/index.html
+++ b/index.html
@@ -40,50 +40,61 @@ tw-story {
 
 &lt;img src=&quot;img/rackgallery.png&quot; alt=&quot;clothing rack with stripper outfits&quot; /&gt;
 
-Most of the girls are honest (click-append: &quot;honest&quot;) [ with you at least,] but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff. (click-append: &quot;stuff&quot;) [: g-strings, costumes, eyeliner, lipstick, money, partners]
+Most of the girls are honest (click-append: &quot;honest&quot;) [ with you at least,] but there&#39;s always one or two who feel entitled to everyone else&#39;s stuff. (click-replace: &quot;stuff&quot;) [g-strings] (click-replace: &quot;g-strings&quot;)[costumes] (click-replace: &quot;costumes&quot;) [eyeliner] (click-replace: &quot;eyeliner&quot;) [lipstick] (click-replace: &quot;lipstick&quot;) [money] (click-replace: &quot;money&quot;) [partners]
 
 &lt;img src=&quot;img/sparkly.png&quot; alt=&quot;clothing rack with sparkly outfits&quot; /&gt;
 
-Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="2" name="slide right to answer" tags="" position="410,276" size="100,100">The timing couldn&#39;t be worse. The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan. You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers. 
+Your phone rings again. It must be an emergency. You [[slide right to answer]].</tw-passagedata><tw-passagedata pid="2" name="slide right to answer" tags="" position="410,276" size="100,100">The timing couldn&#39;t be worse. (click-append: &quot;The timing couldn&#39;t be worse.&quot;) [ The girls are swarming around your rack of pretty things, asking for pricing, tangling bras in hangers and putting light-coloured garments at the risk of fake tan.] (click-append: &quot;at the risk of fake tan.&quot;) [ You cringe as an 8-inch stilletto comes perilously close to shredding a pair of knickers.]
 
 
-&quot;Can you please try those on over your G?&quot; you call out to Bambi on Stilts. She stares blankly, not comprehending the basic rules dressing room etiquette.
+&quot;Can you please try those on over your G?&quot; you call out to Bambi on Stilts. (click-append: &quot;Bambi on Stilts.&quot;) [ She stares blankly, not comprehending the basic rules dressing room etiquette.]
+
 
 &lt;img src=&quot;img/heels.png&quot; alt=&quot;stripper shoes&quot; /&gt;
 
-&quot;Sorry,&quot; you say to Jade. &quot;What&#39;s up?&quot;
+
+&quot;Sorry,&quot; you say to Jade. &quot;What&#39;s up?&quot; (click-append: &quot;What&#39;s up?&quot;) [&quot;
 
 
-&quot;Someone just rang me on the intercom telling me they&#39;re here to install chickenwire fencing,&quot; she says. &quot;I&#39;m scared.&quot;
+&quot;Someone just rang me on the intercom telling me they&#39;re here to install chickenwire fencing,&quot; she says. &quot;I&#39;m scared.] (click-append: &quot;I&#39;m scared.&quot;) [&quot;
 
 
-&quot;Who is it?&quot;
+&quot;Who is it?] (click-append: &quot;Who is it?&quot;) [&quot;
 
 
-&quot;They won&#39;t say.&quot;
+&quot;They won&#39;t say.] (click-append: &quot;They won&#39;t say.&quot;) [&quot;
 
 
-&quot;Call the police.&quot;
+&quot;Call the police.] (click-append: &quot;Call the police.&quot;) [&quot;
 
 
-&quot;Can&#39;t. I&#39;m holding.&quot;
+&quot;Can&#39;t. I&#39;m holding.]
 
 
-You tell her that it&#39;s probably just X, your erstwhile boyfriend. 
+You tell her...(click-append: &quot;You tell her...&quot;) [that it&#39;s probably just X, your erstwhile boyfriend.] 
 
-Do you [[panic because of what happened the other week]] or offer to [[call X]] to find out for sure?</tw-passagedata><tw-passagedata pid="3" name="panic because of what happened the other week" tags="" position="452,390" size="100,100">Tramp&#39;s not your usual scene, but you go there with Jade and X to watch your friend spin the decks. There&#39;s MDMA going around in the water bottles, some marijuana in the cigarettes. Nothing out of the ordinary for a Sunday night. X is convinced that you&#39;re on something he&#39;s not, so he searches your purse for pills and finds nothing. He swears he sees you giving your number out to other guys, so he searches your phone and finds nothing. 
+Do you [[panic because of what happened the other week]] or offer to [[call X]] to find out for sure?</tw-passagedata><tw-passagedata pid="3" name="panic because of what happened the other week" tags="" position="452,390" size="100,100">Tramp&#39;s not your usual scene. (click-append: &quot;Tramp&#39;s not your usual scene&quot;) [, but you go there with Jade and X to watch your friend spin the decks.] (click-append: &quot;spin the decks.&quot;) [ There&#39;s MDMA going around in the water bottles, some marijuana in the cigarettes. Nothing out of the ordinary for a Sunday night] 
 
 &lt;img src=&quot;img/tramp.png&quot; alt=&quot;party girls at Tramp&quot; /&gt;
 
+
+X is convinced that you&#39;re on something he&#39;s not, so he searches your purse for pills and finds nothing. (click-append: &quot;he searches your purse for pills and finds nothing.&quot;) [ He swears he sees you giving your number out to other guys, so he searches your phone and finds nothing. ]
+
+
 Your edges are blurred, a bit warm and fuzzy, so you shake off X&#39;s possessiveness and continue dancing, trying not to let his paranoia kill the vibe. 
+
 
 &lt;img src=&quot;img/purple.png&quot; alt=&quot;blurry purple dress&quot; /&gt;
 
+
 Next minute X is professing his undying love to Jade (who looks nothing like you) and calling her by your pet names. 
+
 
 &quot;You mean you love Jenny,&quot; Jade says to X.
 
+
 &lt;img src=&quot;img/purpleblurs.png&quot; alt=&quot;blurry girls&quot; /&gt;
+
 
 You&#39;re not jealous because his confusion and disorientation is obvious. X is existing in an alternate reality, where every woman is a reflection of you, and you are reflected in every woman&#39;s actions, lit up by multi-coloured strobing lights. 
 
@@ -139,7 +150,7 @@ Words etched in your neuropathways.
 (live: 0.5s) [(either: &quot;maybe&quot;, &quot;I&quot;, &quot;don&#39;t&quot;, &quot;want&quot;, &quot;to&quot;, &quot;be&quot;, &quot;a&quot;, &quot;father&quot;)]
 
 
-[[You expect to feel...]]</tw-passagedata><tw-passagedata pid="6" name="having something stolen" tags="" position="567,156" size="100,100">Karla is owned by a boxer from Sydney, or at least that&#39;s how it appears from the way she has to sneak around to have any semblence of a life. You love her and Carmella immediately when they catch and call out the girl who rips an outfit off your rack and hides it away without payment. 
+[[You expect to feel...]]</tw-passagedata><tw-passagedata pid="6" name="having something stolen" tags="" position="567,156" size="100,100">Karla is owned by a boxer from Sydney. (click-append: &quot;Karla is owned by a boxer from Sydney&quot;) [, or at least that&#39;s how it appears from the way she has to sneak around to have any semblence of a life] You love her and Carmella immediately when they catch and call out the girl who rips an outfit off your rack and hides it away without payment. 
 
 
 Karla buys Ed Hardy hoodies and dresses from you. (click-replace: &quot;hoodies and dresses&quot;) [shit] (click-append: &quot;Ed Hardy shit from you.&quot;) [ The bikies love it.]
